--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -24,6 +24,6 @@
   <input type="submit" value="Add Flight">
 </form>
 <br>
-<a href="/">Home</a> | <a href="/flights">Flights</a>
+<a href="/">Home</a> | <a href="/flights">All Flights</a>
 </body>
 </html>
