--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,6 @@
   <body>
     <h1>Mongoose Flights</h1>
     <p>Welcome!!!</p>
-    <a href="/flights/new">New Flight</a> | <a href="/flights">All Flights</a>
+    <a href="/flights/new">Add Flight</a> | <a href="/flights">All Flights</a>
   </body>
 </html>
