--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -19,7 +19,7 @@
     <input type="text" name="flightNo">
   </label><br>
   <label>Departure Date:
-    <input type="text" name="departs">
+    <input type="datetime-local" name="departs">
   </label><br>
   <input type="submit" value="Add Flight">
 </form>
