Add Show page and additional functionality

--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -13,8 +13,15 @@
     <input type="text" name="airline">
   </label><br>
   <label>Airport:
-    <input type="text" name="airport">
-  </label><br>
+    <select name="airport">
+      <option value="DEN">DEN</option>
+      <option value="DFW">DFW</option>
+      <option value="AUS">AUS</option>
+      <option value="LAX">LAX</option>
+      <option value="SAN">SAN</option>
+    </select>
+    </label>
+    <br>
   <label>Flight Number: 
     <input type="text" name="flightNo">
   </label><br>
