--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -12,8 +12,8 @@
   <table>
     <thead>
       <tr>
-        <th>Airport</th>
         <th>Airline</th>
+        <th>Airport</th>
         <th>Flight Number</th>
         <th>Departs</th>
       </tr>
@@ -25,6 +25,7 @@
           <td><%= f.airport %></td>
           <td><%= f.flightNo %></td>
           <td><%= f.departs %></td>
+          <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
         </tr>
       <% }); %>
     </tbody>
